# sflynlang-interpreter

./: .editorconfig  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
compiler/: Cargo.toml  builtins.rs  environment.rs  evaluator.rs  lib.rs  objects.rs  typechecker.rs
compiler/builtins/: numbers.rs
compiler/environment/: store.rs
core/: Cargo.toml  commands.rs  main.rs  structures.rs  utils.rs
core/commands/: add.rs  init.rs  start.rs
core/structures/: dependency.rs  sflynlang.rs  slang.rs  slang_dependency.rs
core/utils/: restricted_names.rs
examples/fibonacci/: index.sf  sflynlang.yml  slang.yml
examples/hello_world/: sflynlang.yml  slang.yml
examples/interfaces/: index.sf  sflynlang.yml
interpreter/: Cargo.toml  environment.rs  evaluator.rs  objects.rs
parser/: Cargo.toml  ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  position.rs  precedence.rs  token.rs
parser/ast/: data_types.rs  expressions.rs  node.rs  statements.rs
parser/parser/: data_types.rs  expressions.rs  statements.rs
