[package]
name = "sflynlang-compiler"
version = "0.1.0"
edition = "2018"
description = "High-Level programming language."
authors = ["Sflynlang Contributors"]
license = "MIT"
repository = "https://github.com/sflynlang/sflynlang-interpreter"

[lib]
path = "lib.rs"

[dependencies]
sflynlang-parser = { path = "../parser", version = "0.1.0" }
