[package]
name = "sflyn"
version = "0.1.0"
edition = "2018"
description = "Multiparadigm and cross-platform programming language"
authors = ["Sflynlang Contributors"]
license = "MIT"
repository = "https://github.com/sflynlang/sflynlang-compiler"
default-run = "sflyn"

[[bin]]
name = "sflyn"
path = "main.rs"

[dependencies]
clap = "3.0.0-beta.2"
semver = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
sflynlang-compiler = { path = "../compiler", version = "0.1.0" }
sflynlang-parser = { path = "../parser", version = "0.1.0" }

[package.metadata.winres]
OriginalFilename = "sflyn.exe"
LegalCopyright = "© Sflynlang contributors & Sfllang. MIT licensed."
ProductNAme = "Sflynlang"
FileDescription = "Multiparadigm and cross-platform programming language"
