[package]
name = "sflyn"
version = "0.1.0"
edition = "2018"
description = "High-Level programming language."
authors = ["Sflynlang Contributors"]
license = "MIT"
repository = "https://github.com/sflynlang/sflynlang-interpreter"
default-run = "sflyn"

[[bin]]
name = "sflyn"
path = "main.rs"

[dependencies]
clap = "3.0.0-beta.2"
sflynlang-compiler = { path = "../compiler", version = "0.1.0" }
sflynlang-parser = { path = "../parser", version = "0.1.0" }

[package.metadata.winres]
OriginalFilename = "sflyn.exe"
LegalCopyright = "© Sflynlang contributors & Sfllang. MIT licensed."
ProductNAme = "Sflynlang"
FileDescription = "High-level programming language"
