[package]
name = "sflynlang-interpreter"
version = "0.1.0"
edition = "2018"
description = "Multiparadigm and cross-platform programming language"
authors = ["Sflynlang Contributors"]
license = "MIT"
repository = "https://github.com/sflynlang/sflynlang-compiler"

[lib]
path = "lib.rs"

[dependencies]
sflynlang-parser = { path = "../parser", version = "0.1.0" }
